added the user details

--- a/src/app/register-from/register-from.component.html
+++ b/src/app/register-from/register-from.component.html
@@ -126,7 +126,7 @@
         </div>
       </label>
     </div>
-    <button type="submit" class="btn btn-success" [disabled]="!detailsForm.valid">Submit</button>
+    <button type="submit" class="btn btn-success" [disabled]="!detailsForm.valid && !confrimPass">Submit</button>
   </form>
   <br/>
 </div>
