--- a/src/app/details-table/details-table.component.html
+++ b/src/app/details-table/details-table.component.html
@@ -1,3 +1,5 @@
-<p>
-  details-table works!
-</p>
+<div class="tableContainer" align="center">
+  <h1>User Details</h1>
+<table class=" table table-hover" id="userDetails"></table>
+<button (click)='editDetails()'>Edit Details</button>
+</div>
