--- a/src/app/register-from/register-from.component.html
+++ b/src/app/register-from/register-from.component.html
@@ -87,7 +87,7 @@
     <div class="form-group">
       <label>
         Password:
-        <input type="text" class="form-control" formControlName="password" maxlength="16">
+        <input type="password" class="form-control" formControlName="password" maxlength="16">
         <div *ngIf="getDetail.password.invalid && (getDetail.password.dirty || getDetail.password.touched)" class="alert alert-danger">
           <div *ngIf="getDetail.password.errors.required">
             It is required.
@@ -98,35 +98,20 @@
           <div *ngIf="getDetail.password.errors.pattern">
             It must have atleast one Uppercase, one Lowercase, one Digit and one Special character.
           </div>
-         
+
         </div>
       </label>
     </div>
     <div class="form-group">
       <label>
         Confirm Password:
-        <input type="text" class="form-control" formControlName="confirmPassword" maxlength="16" (keyup) = 'checkPass()'>
-        <div *ngIf="((!confrimPass) || getDetail.confirmPassword.invalid) && (getDetail.confirmPassword.dirty || getDetail.confirmPassword.touched)" 
-        class="alert alert-danger">
-         <div  *ngIf = "confrimPass">
-          <div *ngIf="getDetail.confirmPassword.errors.required">
-            It is required.
-          </div>
-          
-          <div *ngIf="getDetail.confirmPassword.errors.minlength">
-            It must be 8 characters long.
-          </div>
-          <div *ngIf="getDetail.confirmPassword.errors.pattern">
-            It must have atleast one Uppercase, one Lowercase, one Digit and one Special character.
-          </div>      
-         </div> 
-         <div *ngIf="!confrimPass">
+        <input type="password" class="form-control" formControlName="confirmPassword" maxlength="16" (keyup)='checkPass()'>
+        <div *ngIf="!confrimPass && (getDetail.confirmPassword.dirty || getDetail.confirmPassword.touched)" class="alert alert-danger">
           Password doesn't match.
-        </div>
         </div>
       </label>
     </div>
-    <button type="submit" class="btn btn-success" [disabled]="!detailsForm.valid && !confrimPass">Submit</button>
+    <button type="submit" class="btn btn-success" [disabled]="(!detailsForm.valid)">Submit</button>
   </form>
   <br/>
 </div>
