patch of password toggle

--- a/src/app/register-from/register-from.component.html
+++ b/src/app/register-from/register-from.component.html
@@ -87,7 +87,10 @@
     <div class="form-group">
       <label>
         Password:
-        <input type="password" class="form-control" formControlName="password" maxlength="16">
+        <div class="form-control">
+        <input type="password" id="passwordId" style="border: none;" formControlName="password" maxlength="16">
+        <span class="glyphicon glyphicon-eye-open" (click)='togglePass("passwordId")'></span>
+      </div>
         <div *ngIf="getDetail.password.invalid && (getDetail.password.dirty || getDetail.password.touched)" class="alert alert-danger">
           <div *ngIf="getDetail.password.errors.required">
             It is required.
@@ -105,7 +108,10 @@
     <div class="form-group">
       <label>
         Confirm Password:
-        <input type="password" class="form-control" formControlName="confirmPassword" maxlength="16" (keyup)='checkPass()'>
+        <div class="form-control">
+          <input type="password" style="border: none;" id='confirmPasswordId' formControlName="confirmPassword" maxlength="16"(keyup)='checkPass()'>
+          <span class="glyphicon glyphicon-eye-open" (click)='togglePass("confirmPasswordId")'></span>
+        </div>
         <div *ngIf="!confrimPass && (getDetail.confirmPassword.dirty || getDetail.confirmPassword.touched)" class="alert alert-danger">
           Password doesn't match.
         </div>
