--- a/src/app/details-table/details-table.component.css
+++ b/src/app/details-table/details-table.component.css
@@ -1,7 +1,10 @@
-@import url('https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css');
 .tableContainer {
   max-width: 50%;
   background-color: #f1f1f1;
   margin: auto;
   font-size: 18px;
+}
+#passId{
+  border: none;
+  background-color: inherit;
 }
