--- a/src/app/details-table/details-table.component.html
+++ b/src/app/details-table/details-table.component.html
@@ -1,5 +1,33 @@
 <div class="tableContainer" align="center">
   <h1>User Details</h1>
-  <table class=" table table-hover" id="userDetails"></table>
+  <table class=" table table-hover" id="userDetails">
+    <tr>
+      <td>Employee Id:</td>
+      <td>{{detailsData.empid}}</td>
+    </tr>
+    <tr>
+      <td>First Name:</td>
+      <td>{{detailsData.fname}}</td>
+    </tr>
+    <tr>
+      <td>Last Name:</td>
+      <td>{{detailsData.fname}}</td>
+    </tr>
+    <tr>
+      <td>Gender:</td>
+      <td>{{detailsData.gender}}</td>
+    </tr>
+    <tr>
+      <td>Contact No:</td>
+      <td>{{detailsData.contact}}</td>
+    </tr>
+    <tr>
+      <td>Password:</td>
+      <td>
+        <input type = "password" id="passId" value={{detailsData.password}} disabled="disabled">
+        <span class="glyphicon glyphicon-eye-open" (click)='togglePass("passId")'></span>
+      </td>
+    </tr>
+  </table>
   <button (click)='editDetails()'>Edit Details</button>
 </div>
