patch of password toggle

--- a/src/app/details-table/details-table.component.html
+++ b/src/app/details-table/details-table.component.html
@@ -11,7 +11,7 @@
     </tr>
     <tr>
       <td>Last Name:</td>
-      <td>{{detailsData.fname}}</td>
+      <td>{{detailsData.lname}}</td>
     </tr>
     <tr>
       <td>Gender:</td>
