patch submit button and css

--- a/src/app/details-table/details-table.component.css
+++ b/src/app/details-table/details-table.component.css
@@ -1,6 +1,6 @@
 .tableContainer {
   max-width: 50%;
-  background-color: #f1f1f1;
+  background-color: #ffffff;
   margin: auto;
   font-size: 18px;
 }
