--- a/src/app/details-table/details-table.component.html
+++ b/src/app/details-table/details-table.component.html
@@ -29,5 +29,5 @@
       </td>
     </tr>
   </table>
-  <button (click)='editDetails()'>Edit Details</button>
+  <button class="btn btn-secondary" (click)='editDetails()'>Edit Details</button>
 </div>
