--- a/src/app/register-from/register-from.component.html
+++ b/src/app/register-from/register-from.component.html
@@ -54,15 +54,10 @@
     <div class="form-group">
       <label>
         Gender:
-        <input type="text" class="form-control" maxlength="1" formControlName="gender">
-
-        <div *ngIf="getDetail.gender.invalid && (getDetail.gender.dirty || getDetail.gender.touched)" class="alert alert-danger">
-          <div *ngIf="getDetail.gender.errors.required">
-            It is required.
-          </div>
-          <div *ngIf="getDetail.gender.errors.pattern">
-            It can be M or F
-          </div>
+        <br/>
+        <div *ngFor="let gen of genders" class="radioGroupy">
+          &nbsp;
+          <input type="radio" [value]='gen' formControlName="gender" id={{gen}}> &nbsp; {{gen}}
         </div>
       </label>
     </div>
