--- a/src/app/details-table/details-table.component.html
+++ b/src/app/details-table/details-table.component.html
@@ -7,11 +7,11 @@
     </tr>
     <tr>
       <td>First Name:</td>
-      <td>{{detailsData.fname}}</td>
+      <td>{{detailsData.fname | uppercase}}</td>
     </tr>
     <tr>
       <td>Last Name:</td>
-      <td>{{detailsData.lname}}</td>
+      <td>{{detailsData.lname | uppercase}}</td>
     </tr>
     <tr>
       <td>Gender:</td>
